--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 # Site Author
 author:
   name             : "Wei-Chin Ho"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "An evolutionary biologist"
   location         : "Tempe, AZ"
   employer         :
