--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Personal page" #"Your Name / Site Title"
+title                    : "Home" #"Your Name / Site Title"
 title_separator          : "-"
 name                     : &name "Wei-Chin Ho"
 description              : &description "An evolutionary biologist."
