--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 author:
   name             : "Wei-Chin Ho"
   avatar           : "profile.jpg"
-  bio              : "An evolutionary biologist"
+  bio              : "Postdoc, evolutionary biologist, curious about the world"
   location         : "Tempe, AZ"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=7zJZMeUAAAAJ&hl=en"
