--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "Home" #"Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "Wei-Chin Ho"
+name                     : &name "Dr. Wei-Chin Ho"
 description              : &description "An evolutionary geneticist."
 url                      : https://wchoevo.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
