--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Wei-Chin Ho"
+  name             : "Dr. Wei-Chin Ho"
   avatar           : "profile.jpg"
   bio              : "Evolutionary geneticist"
   location         : "Tyler, TX"
