--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 author:
   name             : "Dr. Ho's Lab of Microbial Genetics and Evolution"
   avatar           : "word_cloud.jpeg.jpg"
-  bio              : "---------------------------"
+  bio              : "-------------------"
   location         : "Tyler, TX"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=7zJZMeUAAAAJ&hl=en"
