--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 # Site Author
 author:
   name             : "Dr. Ho's Lab of Microbial Genetics and Evolution"
-  avatar           : "word_cloud.jpeg.jpg"
+  avatar           : "plating.jpg"
   bio              : "-------------------"
   location         : "Tyler, TX"
   employer         :
