--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,6 +18,9 @@ main:
   #- title: "CV"
   #  url: /cv/
 
+  - title: "Principal Investigator"
+    url: /principalInvestigator/  
+  
   - title: "Members"
     url: /members/  
 
@@ -33,5 +36,5 @@ main:
   #- title: "Guide"
   #  url: /markdown/
   
-  - title: "Diversity/Equity/Inclusion"
-    url: /dei/
+  #- title: "Diversity/Equity/Inclusion"
+  #  url: /dei/
